--- a/Login.html
+++ b/Login.html
@@ -41,10 +41,10 @@
                     <label class="form-check-label" for="Check1">記住我</label>
                 </div> -->
                 <button type="submit" @keyup.enter="submit" class="btn btn-light btn-block mb-3" @click="logIn">登入</button>
-                <div class="btn-group btn-group-sm w-100" role="group">
+                <!-- <div class="btn-group btn-group-sm w-100" role="group">
                     <button type="button" class="btn btn-outline-light w-50" @click="signOut">登出</button>
                     <button type="button" class="btn btn-outline-light w-50" @click="getData">取得資料</button>    
-                </div>
+                </div> -->
             </form>
         </div>
     </div>
