--- a/Dashboard.html
+++ b/Dashboard.html
@@ -86,7 +86,7 @@
         <pagination :pages="pagination" @emit-pages="getAllProducts"></pagination>
 
         <!-- modal 元件 不知道出什麼問題，先註解起來 -->
-        <!-- <product-modal ref="addModel" :is-new="isNew" :user="user" @update="getAllProducts"></product-modal> -->
+        <!-- <product-modal ref="addModal" :is-new="isNew" :user="user" @update="getAllProducts"></product-modal> -->
 
         <!-- add Modal -->
         <div class="modal fade bd-example-modal-xl" id="addModal" tabindex="-1" role="dialog"
